crates/tm-sparql/tests/snapshots/lower_reifiers__annotation_block.snap
---
source: crates/tm-sparql/tests/lower_reifiers.rs
expression: "ir(\"SELECT ?c ?s WHERE { v:alice v:worksAt v:acme {| v:confidence ?c ; v:source ?s |} }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?c ?s]
  (join
    (triple ?~b0 <urn:tiramemsu:v:confidence> ?c :view now)
    (triple ?~b0 <urn:tiramemsu:v:source> ?s :view now)
    (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now :eid ?~b0)))
