crates/tm-sparql/tests/snapshots/lower_reifiers__annotation_with_reifier.snap
---
source: crates/tm-sparql/tests/lower_reifiers.rs
expression: "ir(\"SELECT ?r ?c WHERE { v:alice v:worksAt v:acme ~ ?r {| v:confidence ?c |} }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?r ?c]
  (join
    (triple ?r <urn:tiramemsu:v:confidence> ?c :view now)
    (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now :eid ?r)))
