crates/tm-sparql/tests/snapshots/lower_reifiers__explicit_reifies.snap
---
source: crates/tm-sparql/tests/lower_reifiers.rs
expression: "ir(\"SELECT ?r WHERE { ?r rdf:reifies <<( v:alice v:worksAt v:acme )>> }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?r]
  (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now :eid ?r))
