crates/tm-sparql/tests/snapshots/lower_reifiers__reified_triple_subject.snap
---
source: crates/tm-sparql/tests/lower_reifiers.rs
expression: "ir(\"SELECT ?c WHERE { << v:alice v:worksAt v:acme >> v:confidence ?c }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?c]
  (join
    (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now :eid ?~b0)
    (triple ?~b0 <urn:tiramemsu:v:confidence> ?c :view now)))
