crates/tm-sparql/tests/snapshots/lower_reifiers__triple_term_object.snap
---
source: crates/tm-sparql/tests/lower_reifiers.rs
expression: "ir(\"ASK { v:belief9 v:supportedBy <<( v:alice v:worksAt v:acme )>> }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?~ask]
  (orderLimit [] :limit 1
    (extend ?~ask true
      (project []
        (join
          (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now :eid ?~e0)
          (triple <urn:tiramemsu:v:belief9> <urn:tiramemsu:v:supportedBy> ?~e0 :view now))))))
